syntax = "proto3";

import "moviesession/model/model.proto";

option java_multiple_files = true;
option java_package = "com.brekhin.moviesession.grpc.model";

message GRpcAddDateOfSessionResponse {
    int64 dateOfSessionId = 1;
}

message GRpcAddSessionResponse {
    int64 sessionId = 1;
}


message GRpcGetInfoAboutSessionByIdResponse {
    GSession timeOfSessions = 1;
}

message GRpcGetSessionsByMovieIdResponse {
    repeated GSession sessions = 1;
}

message GRpcGetAllCinemaHallResponse{
    repeated GCinemaHall gCinemaHall = 1;
}

message GRpcAddCinemaHallResponse {
    int64 hallId = 1;
}

message GRpcDeleteCinemaHallByIdResponse {
    int64 hallId = 1;
}

message GRpcGetCinemaHallByIdResponse {
    GCinemaHall gCinemaHall = 1;
}

